<resources>
    <string name="home1">HOME</string>
    <string name="todo1">TODO</string>
    <string name="tabla_alimenticia">Tabla Alimenticia</string>
    <string name="home2">HOME</string>
    <string name="opcion_2">OPCION 2</string>
    <string name="opcion_1">OPCION 1</string>
    <string name="click_en_opcion_2_para_informacion_alimenticia">Click en OPCION 2 para Informacion Alimenticia</string>
    <string name="click_en_opcion_1_para_activar_comedero">Click en OPCION 1 para activar comedero</string>
    <string name="home3">HOME</string>
    <string name="alimentame">ALIMENTAME</string>
    <string name="home4">HOME</string>
    <string name="pulsa_para_suministrar_una_porcion_de_alimento">Pulsa para suministrar una porcion de alimento</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="pulsa_aqui">PULSA AQUI</string>
    <string name="bienvenido_a_la_aplicacion_comedor_rpi">BIENVENIDO A LA APLICACION COMEDOR RPI</string>
</resources>
