<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@android:color/darker_gray"
        android:text="@string/home2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="698dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/pulsa_para_suministrar_una_porcion_de_alimento"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="59dp" />

    <ImageButton
        android:id="@+id/iButton2"
        android:layout_width="232dp"
        android:layout_height="211dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:background="@drawable/alimentame"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iButton2"
        android:layout_centerHorizontal="true"
        android:text="@string/alimentame"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>